--- a/404.html
+++ b/404.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Snibox</title>
-    <meta name="description" content="">
+    <meta name="description" content="Self-hosted code snippets manager.">
+    <link rel="icon" href="/favicon.png">
     
-    
-    <link rel="preload" href="/assets/css/0.styles.283fa6bf.css" as="style"><link rel="preload" href="/assets/js/app.47f3022a.js" as="script"><link rel="prefetch" href="/assets/js/2.8362f20a.js"><link rel="prefetch" href="/assets/js/1.489d9a6b.js"><link rel="prefetch" href="/assets/js/3.49a116d6.js"><link rel="prefetch" href="/assets/js/4.58c52dc8.js"><link rel="prefetch" href="/assets/js/5.18eaed94.js"><link rel="prefetch" href="/assets/js/6.f47c8cca.js"><link rel="prefetch" href="/assets/js/7.4e251849.js"><link rel="prefetch" href="/assets/js/8.6c5efe88.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.283fa6bf.css">
+    <link rel="preload" href="/assets/css/0.styles.2897b330.css" as="style"><link rel="preload" href="/assets/js/app.05c34a6a.js" as="script"><link rel="prefetch" href="/assets/js/2.5582a065.js"><link rel="prefetch" href="/assets/js/1.ee72b62a.js"><link rel="prefetch" href="/assets/js/3.153d1329.js"><link rel="prefetch" href="/assets/js/4.95bacd77.js"><link rel="prefetch" href="/assets/js/5.66d53a0d.js"><link rel="prefetch" href="/assets/js/6.c0e026ea.js"><link rel="prefetch" href="/assets/js/7.ce83ca84.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.2897b330.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1><blockquote>That's a Four-Oh-Four.</blockquote><a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.47f3022a.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1><blockquote>Looks like we've got some broken links.</blockquote><a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.05c34a6a.js" defer></script>
   </body>
 </html>
