--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Self-hosted code snippets manager.">
     <link rel="icon" href="/favicon.png">
     
-    <link rel="preload" href="/assets/css/0.styles.2897b330.css" as="style"><link rel="preload" href="/assets/js/app.05c34a6a.js" as="script"><link rel="prefetch" href="/assets/js/2.5582a065.js"><link rel="prefetch" href="/assets/js/1.ee72b62a.js"><link rel="prefetch" href="/assets/js/3.153d1329.js"><link rel="prefetch" href="/assets/js/4.95bacd77.js"><link rel="prefetch" href="/assets/js/5.66d53a0d.js"><link rel="prefetch" href="/assets/js/6.c0e026ea.js"><link rel="prefetch" href="/assets/js/7.ce83ca84.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.2897b330.css">
+    <link rel="preload" href="/assets/css/0.styles.15d4badb.css" as="style"><link rel="preload" href="/assets/js/app.853a18de.js" as="script"><link rel="prefetch" href="/assets/js/2.5582a065.js"><link rel="prefetch" href="/assets/js/1.ee72b62a.js"><link rel="prefetch" href="/assets/js/3.153d1329.js"><link rel="prefetch" href="/assets/js/4.95bacd77.js"><link rel="prefetch" href="/assets/js/5.66d53a0d.js"><link rel="prefetch" href="/assets/js/6.c0e026ea.js"><link rel="prefetch" href="/assets/js/7.325e54db.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.15d4badb.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1><blockquote>Looks like we've got some broken links.</blockquote><a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.05c34a6a.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1><blockquote>There's nothing here.</blockquote><a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.853a18de.js" defer></script>
   </body>
 </html>
